--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
   <main>
     <div class="images-mobile">
-      <img src="images/illustration-woman-online-mobile.svg" alt="woman-mobile" class="woman-mobile">
-      <img src="images/bg-pattern-mobile.svg" alt="pattern-mobile" class="pattern-mobile">
+      <img src="images/illustration-woman-online-mobile.svg" alt="" class="woman-mobile">
+      <img src="images/bg-pattern-mobile.svg" alt="" class="pattern-mobile">
     </div>
     <div class="images-desktop">
-      <img src="images/illustration-woman-online-desktop.svg" alt="woman-desktop" class="woman-desktop">
-      <img src="images/bg-pattern-desktop.svg" alt="pattern-desktop" class="pattern-desktop">
+      <img src="images/illustration-woman-online-desktop.svg" alt="" class="woman-desktop">
+      <img src="images/bg-pattern-desktop.svg" alt="" class="pattern-desktop">
     </div>
-      <img src="images/illustration-box-desktop.svg" alt="box-desktop" class="box-desktop">
+      <img src="images/illustration-box-desktop.svg" alt="" class="box-desktop">
     <div class="accordion-desktop">
       <h1>FAQ</h1>
       <div class="accordion">
