--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
     </div>
   </main>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="arumdyaharum.github.io">Dyah A</a>.
-  </div>
+  <footer
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="arumdyaharum.github.io">Dyah A</a>.
+    </div>
+  </footer
 
   <script>
     const accordionTitle = document.querySelectorAll(".accordion-title");
