--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
   </main>
 
-  <footer
+  <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="arumdyaharum.github.io">Dyah A</a>.
