--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="arumdyaharum.github.io">Dyah A</a>.
     </div>
-  </footer
+  </footer>
 
   <script>
     const accordionTitle = document.querySelectorAll(".accordion-title");
